<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/bg_firstpage"
		tools:context=".module.auth.welcome.IntroLoginActivity">

		<LinearLayout
				android:layout_marginTop="15dp"
				android:padding="10dp"
				android:layout_alignParentEnd="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:orientation="horizontal">

				<ImageView
						android:layout_width="18dp"
						android:layout_height="18dp"
						android:src="@drawable/internet"/>



			<Spinner
					android:id="@+id/sp_lang_intro"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />

		</LinearLayout>



		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_centerInParent="true"
				android:gravity="center">

				<ImageView
						android:layout_width="250dp"
						android:layout_height="100dp"
						android:src="@drawable/logo"/>

				<Button
						style="@style/AppTheme.Widget.Button"
						android:id="@+id/btn_signup_intro"
						android:textColor="#fff"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginStart="50dp"
						android:layout_marginEnd="50dp"
						android:layout_marginTop="30dp"
						android:layout_marginBottom="20dp"
						android:text="@string/sign_up"
						android:padding="10dp"
						android:textSize="15dp"
						android:background="@drawable/btn_signup_background"
						android:textAllCaps="false"/>

				<TextView
						android:fontFamily="@font/raleway_regular"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:text="@string/already_have_account"/>


			<Button
					style="@style/AppTheme.Widget.Button"
					android:id="@+id/btn_login_intro"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginStart="50dp"
					android:layout_marginEnd="50dp"
					android:layout_marginTop="20dp"
					android:layout_marginBottom="20dp"
					android:text="@string/login"
					android:padding="10dp"
					android:textColor="@color/colorPrimaryDark"
					android:textSize="15dp"
					android:background="@drawable/btn_login_background"
					android:textAllCaps="false"/>

		</LinearLayout>


		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_marginBottom="20dp"
				android:layout_alignParentBottom="true">

			<TextView
					android:fontFamily="@font/raleway_regular"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textSize="@dimen/font_small"
					android:text="@string/by_using_xplorian"
					android:gravity="center"/>

			<TextView
					android:fontFamily="@font/raleway_semibold"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:textStyle="bold"
					android:textSize="@dimen/font_small"
					android:text="@string/term_policy"/>

		</LinearLayout>




</RelativeLayout>