<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/bg_firstpage"
		tools:context=".module.auth.welcome.IntroActivity">



	<LinearLayout
			android:id="@+id/ll_top_intro"
			android:layout_width="match_parent"
			android:layout_height="600dp"
			android:orientation="vertical"
			android:gravity="center">

		<TextView
				android:fontFamily="@font/raleway_semibold"
				android:gravity="center"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/welcome"
				android:textStyle="bold"
				/>

		<ImageView
				android:layout_width="250dp"
				android:layout_height="100dp"
				android:gravity="center"
				android:src="@drawable/logo"/>


		<LinearLayout
				android:layout_marginTop="70dp"
				android:gravity="center"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

			<ImageView
					android:layout_marginEnd="10dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/map"/>

			<TextView
					android:fontFamily="@font/raleway_semibold"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/plan_yor"/>


		</LinearLayout>

		<LinearLayout
				android:layout_marginTop="30dp"
				android:gravity="center"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

			<ImageView
					android:layout_marginEnd="10dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/location"/>

			<TextView
					android:fontFamily="@font/raleway_semibold"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/explore_the"/>


		</LinearLayout>


	</LinearLayout>


	<RelativeLayout
			android:gravity="bottom"
			android:layout_alignParentBottom="true"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

		<Button
				style="@style/AppTheme.Widget.Button"
				android:id="@+id/btn_getstarted"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="15sp"
				android:padding="15dp"
				android:textAllCaps="true"
				android:textColor="#fff"
				android:textStyle="bold"
				android:fontFamily="@font/raleway_semibold"
				android:background="@color/colorPrimaryDark"
				android:text="@string/get_started"/>


	</RelativeLayout>









</RelativeLayout>