<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/bg_firstpage"
		tools:context=".module.auth.login.LoginActivity">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_centerInParent="true"
			android:gravity="center">

		<ImageView
				android:layout_width="250dp"
				android:layout_height="100dp"
				android:src="@drawable/logo"/>


		<TextView
				android:fontFamily="@font/raleway_regular"
				android:layout_marginTop="30dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/reset_password"
				android:gravity="center"
				android:textSize="20dp"
				android:textStyle="bold"
				/>

		<TextView
				android:fontFamily="@font/raleway_regular"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/enter_the_email"
				android:gravity="center"
				android:layout_margin="30dp"
				android:textSize="15dp"
				/>




		<androidx.cardview.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:cardCornerRadius="5dp"
				app:cardUseCompatPadding="true"
				app:cardPreventCornerOverlap="true"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="15dp"
				android:layout_marginStart="35dp"
				android:layout_marginEnd="35dp"
				>

			<androidx.constraintlayout.widget.ConstraintLayout
					android:id="@+id/layout_content"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toTopOf="parent">

				<androidx.constraintlayout.widget.ConstraintLayout
						android:id="@+id/layout_email"
						android:paddingTop="10dp"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_alignParentTop="true"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toTopOf="parent">

					<ImageView
							android:id="@+id/image_mail"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="10dp"
							app:layout_constraintBottom_toBottomOf="parent"
							app:layout_constraintLeft_toLeftOf="parent"
							app:layout_constraintTop_toTopOf="parent" />


					<EditText
							android:id="@+id/ed_email_forgot"
							style="@style/AppTheme.TextAppearance.EditText"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginStart="10dp"
							android:paddingTop="10dp"
							android:drawablePadding="10dp"
							android:drawableLeft="@drawable/email"
							android:hint="@string/email_address"
							android:paddingBottom="10dp"
							android:imeOptions="actionNext"
							android:background="@android:color/transparent"
							android:inputType="textEmailAddress"
							app:layout_constraintLeft_toRightOf="@+id/image_mail"
							app:layout_constraintRight_toRightOf="parent"
							app:layout_constraintTop_toTopOf="parent"/>


				</androidx.constraintlayout.widget.ConstraintLayout>


				<Button
						style="@style/AppTheme.Widget.Button"
						android:id="@+id/btn_submit_forgot"
						android:layout_marginTop="10dp"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/submit"
						android:textColor="#fff"
						android:textAllCaps="false"
						android:background="@color/colorPrimaryDark"
						app:layout_constraintTop_toBottomOf="@+id/layout_email"/>


			</androidx.constraintlayout.widget.ConstraintLayout>



		</androidx.cardview.widget.CardView>


	</LinearLayout>


	<LinearLayout
			android:background="#000"
			android:padding="10dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_alignParentBottom="true">

		<TextView
				android:fontFamily="@font/raleway_regular"
				android:id="@+id/tv_signup_reset"
				android:textColor="#fff"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/dont_have"
				android:gravity="center"/>



	</LinearLayout>




</RelativeLayout>