<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:isScrollContainer="true"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		tools:context=".module.auth.register.RegisterStepTwoFragment">

	<androidx.cardview.widget.CardView
			android:id="@+id/cl_regis_two"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:cardCornerRadius="5dp"
			app:cardUseCompatPadding="true"
			app:cardPreventCornerOverlap="true"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="15dp"
			android:layout_marginStart="35dp"
			android:layout_marginEnd="35dp"
			>

		<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/layout_content"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent">

			<androidx.constraintlayout.widget.ConstraintLayout
					android:id="@+id/layout_first_name"
					android:paddingTop="30dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentTop="true"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toTopOf="parent">


				<TextView
						style="@style/AppTheme.TextAppearance.Label"
						android:drawablePadding="5dp"
						android:drawableLeft="@drawable/gender_male_female"
						android:id="@+id/tv_gender"
						android:layout_marginStart="10dp"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/gender"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintBottom_toTopOf="@+id/layout_input_gender"/>

				<include
						android:id="@+id/layout_input_gender"
						layout="@layout/layout_input_gender"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/tv_gender" />


			</androidx.constraintlayout.widget.ConstraintLayout>

			<View
					android:id="@+id/view_divider"
					android:layout_width="match_parent"
					android:layout_height="0.5dp"
					android:alpha="0.1"
					android:background="#000"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/layout_first_name" />


			<androidx.constraintlayout.widget.ConstraintLayout
					android:id="@+id/layout_last_name"
					android:paddingTop="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentTop="true"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/view_divider">


				<TextView
						style="@style/AppTheme.TextAppearance.Label"
						android:drawablePadding="5dp"
						android:drawableLeft="@drawable/flag"
						android:id="@+id/tv_nationality"
						android:layout_marginStart="10dp"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/nationality"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintBottom_toTopOf="@+id/layout_input_nationality"/>

				<include
						android:id="@+id/layout_input_nationality"
						layout="@layout/layout_input_nationality"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/tv_nationality" />


			</androidx.constraintlayout.widget.ConstraintLayout>

			<View
					android:id="@+id/view_divider_last_name"
					android:layout_width="match_parent"
					android:layout_height="0.5dp"
					android:alpha="0.1"
					android:background="#000"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/layout_last_name" />


			<androidx.constraintlayout.widget.ConstraintLayout
					android:id="@+id/layout_email_sign"
					android:paddingTop="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentTop="true"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/view_divider_last_name">


				<TextView
						style="@style/AppTheme.TextAppearance.Label"
						android:drawablePadding="5dp"
						android:drawableLeft="@drawable/calendar_range"
						android:id="@+id/tv_birthday"
						android:layout_marginStart="10dp"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/birth_date"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintLeft_toLeftOf="parent"/>


				<TextView
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/tv_birthday"
						android:id="@+id/tv_date_birth"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginStart="10dp"
						android:padding="5dp"
						style="@style/AppTheme.TextAppearance.EditText"/>

				<include
						android:id="@+id/layout_input_birthdate"
						layout="@layout/layout_input_birthdate"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/tv_birthday" />


				<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						app:layout_constraintTop_toBottomOf="@+id/tv_date_birth"
						android:text="@string/birthday_warn"
						android:textSize="@dimen/font_smaller"
						android:layout_marginStart="10dp"
						android:textColor="#F53C3C"
						android:padding="5dp"
						android:layout_marginEnd="10dp"/>

			</androidx.constraintlayout.widget.ConstraintLayout>

			<View
					android:id="@+id/view_divider_email"
					android:layout_width="match_parent"
					android:layout_height="0.5dp"
					android:alpha="0.1"
					android:background="#000"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/layout_email_sign" />


			<androidx.constraintlayout.widget.ConstraintLayout
					android:id="@+id/layout_password_sign"
					android:paddingTop="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentTop="true"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/view_divider_email">


				<TextView
						style="@style/AppTheme.TextAppearance.Label"
						android:drawablePadding="5dp"
						android:drawableLeft="@drawable/home_circle"
						android:id="@+id/tv_residence"
						android:layout_marginStart="10dp"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/city_residence"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintBottom_toTopOf="@+id/ed_password_sign"/>

				<EditText
						android:id="@+id/ed_residence"
						style="@style/AppTheme.TextAppearance.EditText"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginStart="10dp"
						android:padding="5dp"
						android:imeOptions="actionNext"
						android:background="@android:color/transparent"
						android:inputType="text"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/tv_residence"/>


			</androidx.constraintlayout.widget.ConstraintLayout>


			<View
					android:id="@+id/view_divider_password"
					android:layout_width="match_parent"
					android:layout_height="0.5dp"
					android:alpha="0.1"
					android:background="#000"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/layout_password_sign" />


			<androidx.constraintlayout.widget.ConstraintLayout
					android:id="@+id/layout_confirm_password"
					android:paddingTop="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentTop="true"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/view_divider_password">


				<TextView
						style="@style/AppTheme.TextAppearance.Label"

						android:drawablePadding="5dp"
						android:drawableLeft="@drawable/account_card_details"
						android:id="@+id/tv_personal_id"
						android:layout_marginStart="10dp"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/personal_identification"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintBottom_toTopOf="@+id/ed_personal_id"/>

				<EditText
						android:id="@+id/ed_personal_id"
						style="@style/AppTheme.TextAppearance.EditText"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginStart="10dp"
						android:padding="5dp"
						android:imeOptions="actionDone"
						android:background="@android:color/transparent"
						android:inputType="number"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/tv_personal_id"/>

				<TextView
						android:visibility="gone"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						app:layout_constraintTop_toBottomOf="@+id/ed_personal_id"
						android:text="@string/personal_iden_warn"
						android:textSize="@dimen/font_smaller"
						android:layout_marginStart="10dp"
						android:textColor="#F53C3C"
						android:padding="5dp"
						android:layout_marginEnd="10dp"/>


			</androidx.constraintlayout.widget.ConstraintLayout>

			<View
					android:id="@+id/view_divider_conf_password"
					android:layout_width="match_parent"
					android:layout_height="0.5dp"
					android:alpha="0.1"
					android:background="#000"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/layout_confirm_password" />


			<Button
					style="@style/AppTheme.Widget.Button"
					android:id="@+id/btn_next_step_two"
					android:layout_marginTop="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/next"
					android:textColor="#fff"
					android:textAllCaps="false"
					android:background="@color/colorPrimaryDark"
					app:layout_constraintTop_toBottomOf="@+id/view_divider_conf_password"/>


		</androidx.constraintlayout.widget.ConstraintLayout>



	</androidx.cardview.widget.CardView>

</androidx.core.widget.NestedScrollView>